--- a/app/assets/stylesheets/widget.css.scss
+++ b/app/assets/stylesheets/widget.css.scss
@@ -1,3 +1,7 @@
+* {
+  font: 13px/normal Verdana, sans-serif, SolaimanLipi;
+}
+
 .floatbox.alt1 {
   background-color: #fff;
   background-image: none;
@@ -37,9 +41,9 @@
     border-top: 1px solid #FFF;
     border-right: 0px solid #FFF;
     border-bottom: 1px solid #FFF;
-    font: 14px Arial, Helvetica, sans-serif; }
+    font: 14px}
   .jb-comp {
-    font: bold 13px Arial, Helvetica, sans-serif;
+    font: bold 13px;
     color: #999999;
     display: block;
     clear: both;
