better response handling form_field type changed to telephone

--- a/app/views/candidate/resume/manage.html.haml
+++ b/app/views/candidate/resume/manage.html.haml
@@ -32,7 +32,7 @@
         .control-group
           = f.label :contact_number, t(:contact_number), :class => 'control-label'
           .controls
-            = f.number_field :contact_number
+            = f.telephone_field :contact_number
 
         .control-group
           = f.label :email, t(:email), :class => 'control-label'
