css changes to match widget to somewhere in view

--- a/app/assets/stylesheets/widget.css.scss
+++ b/app/assets/stylesheets/widget.css.scss
@@ -37,10 +37,9 @@
 .floatmid a {
   &.jb-item {
     display: block;
-    margin-bottom: 10px;
+    margin: 10px 10px 10px 5px;
     border-left: 0px solid #FFF;
     overflow: hidden;
-    margin-left: -10px;
     padding: 5px;
     color: #000;
     border-top: 1px solid #FFF;
